paypal payment implemented

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- map -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <!-- paypal -->
+  <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=ARn88fRt067FpJ71KEqPQAaM1UdkiVe6bMV52hosHhL2nUJrU5iSYSpRYVd2rw6jQwYaykOBOL_yLloj&components=buttons"></script>
 
 </head>
 <body>
