--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/favicon2-32x32.png">
+  <link rel="icon" type="image/x-icon" href="assets/favicon-32x32.png">
   <!-- map -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <!-- paypal -->
