international telephone input in edit-account-page added.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,22 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Web Store</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/favicon-32x32.png">
-  <!-- map -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-  <!-- paypal -->
-  <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=ARn88fRt067FpJ71KEqPQAaM1UdkiVe6bMV52hosHhL2nUJrU5iSYSpRYVd2rw6jQwYaykOBOL_yLloj&components=buttons"></script>
+  <head>
+    <meta charset="utf-8" />
+    <title>Web Store</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
-</head>
-<body>
-  <app-root></app-root>
-</body>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.min.css">
+
+    
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon-32x32.png" />
+    <!-- map -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    />
+    <!-- paypal -->
+    <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=ARn88fRt067FpJ71KEqPQAaM1UdkiVe6bMV52hosHhL2nUJrU5iSYSpRYVd2rw6jQwYaykOBOL_yLloj&components=buttons"></script>
+  </head>
+  <body>
+    <app-root></app-root>
+    
+    <!-- international phone codes -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+  </body>
 </html>
